src/css/components/nav-primary.css
.primary-nav {
  ul {
    list-style: none;
  }

  li {
    margin-bottom: var(--sp1-5);

    &:last-child {
      margin-bottom: 0;
    }

    &.has-children {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;

      @media (--nav) {
        flex-wrap: nowrap; /* Ensure that button doesn't wrap underneath link. */
      }
    }
  }

  a {
    font-size: 28px;
    font-weight: bold;
    line-height: var(--sp2);
    letter-spacing: -1px;
    color: var(--black-1);
    text-decoration: none;

    @media (--nav) {
      font-size: 16px;
      letter-spacing: 0.02em;
    }
  }
}

.primary-nav--level-1 {
  margin: 0;
  padding: 0;

  @media (--nav) {
    display: flex;
    align-items: center;

    > li {
      position: relative; /* Anchor secondary menu */
      display: flex;
      align-items: center;
      margin: 0;

      &:not(:last-child) {
        margin-right: var(--sp2);
      }

      html:not(.js) &:hover {
        .primary-nav--level-2 {
          visibility: visible;
          opacity: 1;
          transform: translate(-50%, 0);
        }
      }

      /*
        Cannot combine the focus-within pseudoselector with other selectors,
        because it will break IE11 and MS Edge.
      */
       html:not(.js) &:focus-within {
        .primary-nav--level-2 {
          visibility: visible;
          opacity: 1;
          transform: translate(-50%, 0);
        }
      }
    }

    a {
      position: relative;
      display: flex;

      &:hover,
      &:focus {
        outline: 0;

        span:after {
          transform: scalex(1);
        }
      }

      span {
        position: relative;
        display: inline-flex;
        align-items: center;
        padding: var(--sp2) 0;

        &:after {
          content: '';
          position: absolute;
          left: 0;
          bottom: 0;
          width: 100%;
          height: 0;
          transform: scalex(0);
          border-top: solid var(--sp0-5) var(--color--blue-50);
          transition: transform 0.2s;
        }
      }
    }
  }
}

/* Dropdown nav */
.primary-nav--level-2 {
  flex-basis: 100%;
  padding-left: var(--sp2-5);
  border-left: solid var(--sp) var(--color--blue-50);
  margin-left: calc(-1 * var(--sp));
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.2s;

  @media (--md) {
    margin-left: calc(-1 * var(--sp3));
    padding-left: var(--sp3);
  }

  @media (--nav) {
    position: absolute;
    z-index: 5; /* Appear above search container. */
    top: calc(100% - (0.5 * var(--sp)));
    left: 50%;
    transform: translate(-50%, -20px);
    visibility: hidden;
    padding: calc(3 * var(--sp)) var(--sp2);
    background: white;
    border-top: solid var(--color--blue-50) var(--sp0-5);
    border-right: solid 1px transparent; /* Transparent borders useful for Windows High Contrast mode. */
    border-bottom: solid 1px transparent;
    border-left: solid 1px transparent;
    margin-top: 0;
    margin-left: 0;
    border-radius: 0px 0px 2px 2px;
    width: 250px;
    box-shadow: 0 1px 36px rgba(0, 0, 0, 0.08);
    opacity: 0;
    transition: all 0.2s;
    max-height: none;
    overflow: visible;

    /* Arrow */
    &:after {
      content: '';
      position: absolute;
      bottom: calc(100% + (0.5 * var(--sp)));
      left: 50%;
      transform: translatex(-50%);
      height: 0;
      width: 0;
      border-left: solid 10px transparent;
      border-right: solid 10px transparent;
      border-bottom: solid 10px var(--color--blue-50);
    }

    &.is-active {
      visibility: visible;
      opacity: 1;
      transform: translate(-50%, 0);
    }
  }

  /*
    Cannot combine the focus-within pseudoselector with other selectors,
    because it will break IE11 and MS Edge.
  */
  &:focus-within {
    margin-top: var(--sp1-5);
    max-height: none;
    opacity: 1;

    @media (--nav) {
      margin-top: 0;
    }
  }

  &.is-active {
    margin-top: var(--sp1-5);
    max-height: none;
    opacity: 1;

    @media (--nav) {
      margin-top: 0;
    }
  }

  a {
    font-size: 16px;
    line-height: var(--sp);
    font-weight: normal;

    @media (--nav) {
      display: block;

      span {
        padding: var(--sp0-5) 0;

        &:after {
          border-top-width: 3px;
          transform-origin: left;
        }
      }
    }
  }
}

/*
  Button that expands second level nav at mobile
*/
.primary-nav__button-toggle {
  -webkit-appearance: none;
  border: 0;
  background: transparent;
  position: relative;
  width: var(--sp2);
  height: var(--sp2);
  text-indent: -999px;
  overflow: hidden;
  cursor: pointer;

  @media (--nav) {
    align-self: stretch;
    width: calc(12px + 0.5em);
    height: auto;
    padding-left: 0.5em;
    padding-right: var(--sp2);
    margin-right: calc(-1 * var(--sp2));
    padding: 0;

    &:focus {
      outline: 0;

      &:after {
        border-color: var(--color--blue-50);
      }
    }
  }

  &:before,
  &:after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: var(--sp);
    height: 3px;
    background: var(--color--blue-50);

    @media (--nav) {
      content: none;
    }
  }

  &:after {
    transform: translate(-50%, -50%) rotate(90deg);
    transition: opacity 0.2s;

    @media (--nav) {
      content: '';
      top: calc(50% - 2px);
      left: 0.5em; /* Matches the padding-left of the parent button. */
      height: 8px;
      width: 8px;
      border-right: solid 2px currentColor;
      border-bottom: solid 2px currentColor;
      transform: translatey(-50%) rotate(45deg);
      background: transparent;
      opacity: 0.8;
    }
  }

  &[aria-expanded="true"] {
    &:after {
      opacity: 0;

      @media (--nav) {
        opacity: 0.8;
      }
    }
  }

  html:not(.js) & {
    display: none; /* Hide if JS is disabled */
  }
}

